--- a/index.html
+++ b/index.html
@@ -23,27 +23,36 @@
       <section id="project"></section>
       <section id="contact">
         <h2>Contacta Conmigo</h2>
+        <br>
         <form>
           <div>
-          <label>Nombre</label>
-          <input type="text">
+          <label><h3>Nombre</h3>
+            <input type="text">
+          </label>          
         </div> 
         <div>
-          <label>Email</label>
+          <label><h3>Email</h3>
           <input type="text">
+        </label>
         </div>
         <div>
-          <label>Mensaje</label>
+          <label><h3>Mensaje</h3>
+          <input type="text">
+        </label>
         </div>
 
-          <input type="text">
+          
 
         </form>
+       <br>
+
+        <hr>
       </section>
       
       <!---
       ACA va info-->
       <div class="lista de proyectos">
+        <br>
         <div class="project-detail">
           <img src="img/romina.jpg">
 
